<resources>
    <string name="app_name">Safety First</string>
    <string name="app_code">qwh8n</string>
    <string name="deep_link_url">https://qwh8n.app.goo.gl/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Best answer to come here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius-mod tempor insididunt ut labore et dolore manga aliqua. Ut enim ad minim veiam sol monar.</string>
    <string name="title_activity_item_type_info">ItemTypeInfoActivity</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="discussion">Discussion</string>
    <string name="laws">Laws</string>
    <string name="know_it">Know it</string>
    <string name="type_item_image_description">Item Type Image</string>
    <string name="author_name">Author Name</string>
    <string name="news_image">News Image</string>
    <string name="designation">Designation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agreement">I accept the terms and conditions</string>
    <string name="signUp">Sign Up</string>
    <string name="or">Or</string>
    <string name="signIn">Sign In</string>
    <string name="agreement2">By signing in you accept our terms and conditions</string>
    <string name="forgot">Forgot Your Details? Get Help</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="conrmation_sent">A confirmation email will be sent to the above mentioned Email ID</string>
    <string name="conrmation_click">Click on the link in the email to proceed further</string>
    <string name="hello_blank_fragment">blank_fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer facilisis felis imperdiet nibh efficitur, quis aliquam odio volutpat. Morbi in tellus tortor. Ut suscipit velit id nibh luctus, sed accumsan dolor cursus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus in interdum nisi, at volutpat nibh. Mauris ultrices auctor eros non rhoncus. In hac habitasse platea dictumst. Donec ut pulvinar augue, ac semper libero.</string>
    <string name="faqs">FAQs</string>
    <string name="help">Help</string>
    <string name="tnc"><![CDATA[Terms & Conditions]]></string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="invite">Invite</string>
    <string name="bookmark_image">Bookmark Image</string>
    <string name="like">Like</string>
    <string name="answer">Answer</string>
    <string name="company">Company Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="confirm_logout">Are you sure you want to logout from this app?</string>
    <string name="new_project">New Project</string>
    <string name="description">Description</string>
    <string name="attach_media">Attach Media</string>
    <string name="cancel">Cancel</string>
    <string name="evaluation">Evaluation (in Rupees)</string>
    <string name="years">Years</string>
</resources>