<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:iconTint="@color/bg_screen1"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/collections_bookmark"
            android:iconTint="@color/bg_screen2"
            android:title="Bookmarks"/>
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help_black_24dp"
            android:iconTint="@color/bg_screen3"
            android:title="@string/faqs" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:iconTint="@color/bg_screen4"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_tnc"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/tnc" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/feedback" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:iconTint="@color/darkgreen"
                android:title="@string/logout" />

            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_email_black_24dp"
                android:iconTint="@color/darkpurple"
                android:title="@string/invite" />

    </group>
</menu>
