<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_local_activity_black_24dp"
        android:title="@string/news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/discussion"
        android:enabled="true"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/discussion"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/laws"
        android:enabled="true"
        android:icon="@drawable/ic_gavel_black_24dp"
        android:title="@string/laws"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/know_it"
        android:enabled="true"
        android:icon="@drawable/ic_live_help_black_24dp"
        android:title="@string/know_it"
        app:showAsAction="ifRoom" />

</menu>