<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimary"
            android:onClick="createAccount"
            android:text="@string/dont_have_account"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawableTint="@color/colorAccent"
            android:drawablePadding="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/field_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawableTint="@color/colorAccent"
            android:drawablePadding="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimary"
            android:onClick="forgotPassword"
            android:text="@string/forgot"/>
        <Button
            android:id="@+id/button_sign_in"
            android:layout_margin="@dimen/activity_horizontal_margin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signIn"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/skip"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="0.5" />
            <ImageView
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="0.5"
                android:src="@drawable/linkedin"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimary"
            android:text="@string/agreement2"/>
    </LinearLayout>

</ScrollView>