<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/confirm_logout" />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent">
        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorAccent"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>