<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
<ImageView
    android:layout_width="100dp"
    android:layout_height="150dp"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:src="@drawable/logo"
    android:layout_gravity="center"/>

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="@dimen/activity_horizontal_margin"/>
    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="@dimen/activity_horizontal_margin"/>
    <EditText
        android:id="@+id/input_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="@dimen/activity_horizontal_margin"/>
    <EditText
        android:id="@+id/input_password_confirm"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawableTint="@color/colorAccent"
        android:drawablePadding="@dimen/activity_horizontal_margin"/>
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        android:textColor="@color/colorPrimary"
        android:onClick="clickCheckbox"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_margin="@dimen/activity_horizontal_margin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signUp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="0.5"
            android:src="@drawable/google"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/linkedin_signup"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="0.5"
            android:src="@drawable/linkedin"/>
    </LinearLayout>

</LinearLayout>

</ScrollView>