<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/navBarLight">
    <ImageView
        android:id="@+id/LikeBtn"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorPrimaryDark"
        android:src="@drawable/ic_thumb_up_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/bookmark_image" />
    <TextView
        android:id="@+id/LikeTxt"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/LikeBtn"
        android:layout_toEndOf="@+id/LikeBtn" />
    <ImageView
        android:id="@+id/ansBtn"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorPrimaryDark"
        android:src="@drawable/ic_create_black_24dp"
        android:layout_toRightOf="@+id/LikeTxt"
        android:layout_toEndOf="@+id/LikeTxt"
        android:contentDescription="@string/bookmark_image" />
    <TextView
        android:id="@+id/ansTxt"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/ansBtn"
        android:layout_toEndOf="@+id/ansBtn"
        android:layout_toLeftOf="@+id/bookmark"
        android:layout_toStartOf="@+id/bookmark"/>
    <ImageView
        android:id="@+id/bookmark"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorAccent"
        android:src="@drawable/ic_turned_in_not_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/bookmark_image" />



</RelativeLayout>